--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,6 +34,7 @@ platform:
 
 environment:
   matrix:
+    - CONDA_RECIPE: bin\conda\statiskit-unstable
     - CONDA_RECIPE: bin\conda\python-scons
     - CONDA_RECIPE: bin\conda\scons-tools
     - CONDA_RECIPE: bin\conda\python-parse
