--- a/bin/conda/libstatiskit-dev/meta.yaml
+++ b/bin/conda/libstatiskit-dev/meta.yaml
@@ -4,6 +4,10 @@ package:
 
 build:
     number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
+    features:
+        - {{ environ.get('CONDA_FEATURE', 'stable') }}
+    track_features:
+        - {{ environ.get('CONDA_FEATURE', 'stable') }}
 
 build:
     number: 0
