--- a/bin/conda/libtoolchain-dev/meta.yaml
+++ b/bin/conda/libtoolchain-dev/meta.yaml
@@ -27,6 +27,10 @@ package:
     
 build:
   number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
+  features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
+  track_features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
 
 about:
   home: http://statiskit.rtfd.io/
