--- a/bin/conda/glibc/meta.yaml
+++ b/bin/conda/glibc/meta.yaml
@@ -33,6 +33,10 @@ source:
 build:
   number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
   skip: true [not linux]
+  features:
+      - {{ environ.get('CONDA_FEATURE', 'stable') }}
+  track_features:
+      - {{ environ.get('CONDA_FEATURE', 'stable') }}
 
 requirements:
   # build:
