--- a/bin/conda/llvm-suite/meta.yaml
+++ b/bin/conda/llvm-suite/meta.yaml
@@ -70,7 +70,11 @@ package:
   
 build:
   number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
-  
+  features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
+  track_features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
+
 source:
   # - git_url: https://github.com/llvm/llvm
   #   git_tag: master
