--- a/bin/conda/python-parse/meta.yaml
+++ b/bin/conda/python-parse/meta.yaml
@@ -32,6 +32,10 @@ source:
   
 build:
   number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
+  features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
+  track_features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
 
 about:
   home: https://github.com/r1chardj0n3s/parse
