--- a/bin/conda/python-statiskit/meta.yaml
+++ b/bin/conda/python-statiskit/meta.yaml
@@ -3,7 +3,11 @@ package:
     version: {{ environ.get('GIT_DESCRIBE_TAG', '0.9.0') }}
 
 build:
-    number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
+  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
+  features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
+  track_features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
 
 about:
     home: http://statiskit.readthedocs.io/
