--- a/bin/conda/python-toolchain/meta.yaml
+++ b/bin/conda/python-toolchain/meta.yaml
@@ -29,6 +29,10 @@ build:
   number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
   run_exports:
     - pywin32                      [win]
+  features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
+  track_features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
     
 about:
   home: http://statiskit.rtfd.io/
