--- a/bin/conda/statiskit-stable/meta.yaml
+++ b/bin/conda/statiskit-stable/meta.yaml
@@ -1,5 +1,5 @@
 package:
-    name: statiskit-unstable
+    name: statiskit-stable
     version: {{ environ.get('GIT_DESCRIBE_TAG', '0.9.0') }}
 
 build:
@@ -7,7 +7,7 @@ build:
     features:
         - {{ environ.get('CONDA_FEATURE', 'stable') }}
     track_features:
-        - unstable
+        - stable
 about:
     home: http://statiskit.readthedocs.io/
     license: Apache License 2.0
