--- a/bin/conda/statiskit/meta.yaml
+++ b/bin/conda/statiskit/meta.yaml
@@ -3,7 +3,11 @@ package:
     version: {{ environ.get('GIT_DESCRIBE_TAG', '0.9.0') }}
 
 build:
-    number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
+  number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
+  features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
+  track_features:
+    - {{ environ.get('CONDA_FEATURE', 'stable') }}
 
 about:
     home: http://statiskit.readthedocs.io/
@@ -13,6 +17,7 @@ about:
 requirements:
   build:
     - python
+    - statiskit-{{ environ.get('CONDA_FEATURE', 'stable') }}
     - devops-tools
     - vcs
     - statiskit-tools
@@ -24,6 +29,7 @@ requirements:
     - python-statiskit
   run:
     - python
+    - statiskit-{{ environ.get('CONDA_FEATURE', 'stable') }}
     - {{ pin_compatible('devops-tools', exact=True) }}
     - {{ pin_compatible('vcs', exact=True) }}
     - {{ pin_compatible('statiskit-tools', exact=True) }}
