--- a/bin/conda/boost-suite/meta.yaml
+++ b/bin/conda/boost-suite/meta.yaml
@@ -37,7 +37,8 @@ test:
 
 outputs:
   - name: libboost-dev            
-    script: libboost-dev.sh   
+    script: libboost-dev.sh   [unix]
+    script: libboost-dev.bat  [win]
     requirements:                 
       build:                      
         - libtoolchain
@@ -48,7 +49,8 @@ outputs:
         - xz
         - zlib            
   - name: libboost                
-    script: libboost.sh           
+    script: libboost.sh     [unix]      
+    script: libboost.bat    [win]      
     requirements:                 
       build:                      
         - libtoolchain
@@ -59,7 +61,8 @@ outputs:
         - xz
         - zlib            
   - name: libboost_python
-    script: libboost_python.sh
+    script: libboost_python.sh  [unix]
+    script: libboost_python.bat [win]
     requirements:
       build:
         - libtoolchain
