--- a/travis.yml
+++ b/travis.yml
@@ -46,7 +46,7 @@ env:
   # - CONDA_RECIPE=bin/conda/libtoolchain
   # - CONDA_RECIPE=bin/conda/python-toolchain
   - CONDA_RECIPE=bin/conda/boost-suite
-    TRAVIS_WAIT=30
+  #    TRAVIS_WAIT=30
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
   #   TRAVIS_WAIT=50
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
@@ -74,8 +74,8 @@ env:
 
 matrix:
   include:
-    - os: linux
-      dist: precise
+    # - os: linux
+    #   dist: precise
     - os: osx
       osx_image: xcode8.3
     - os: windows
