Update repository structure

--- a/travis.yml
+++ b/travis.yml
@@ -29,56 +29,33 @@ language: cpp
 
 sudo: required
 
+git:
+  depth: false
+
 services:
   - docker
-  
+
+os:
+  - linux
+  - osx
+  - windows
+
+dist: trusty
+osx_image: xcode8.3
+
 env:
-  - CONDA_RECIPE=bin/conda/statiskit-stable
-  # - CONDA_RECIPE=bin/conda/statiskit-unstable
-  # - DOCKER_CONTEXT=bin/docker/linux-32
-  #   DOCKER_CONTAINER=linux-32
-  # - DOCKER_CONTEXT=bin/docker/linux-64
-  #   DOCKER_CONTAINER=linux-64
-  # - CONDA_RECIPE=bin/conda/python-scons
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  # - CONDA_RECIPE=bin/conda/python-parse
-  # - CONDA_RECIPE=bin/conda/llvm-suite
-  # - CONDA_RECIPE=bin/conda/libtoolchain
-  # - CONDA_RECIPE=bin/conda/python-toolchain
-  # - CONDA_RECIPE=bin/conda/boost-suite
-  #   TRAVIS_WAIT=30
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
-  #   TRAVIS_WAIT=50
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
-  # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-  # - CONDA_RECIPE=bin/conda/libtoolchain-dev
-  # - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
-  # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl-dev
-  # - CONDA_RECIPE=share/git/STL/bin/conda/libstatiskit_stl
-  # - CONDA_RECIPE=share/git/STL/bin/conda/python-statiskit_stl
-  # - CONDA_RECIPE=share/git/LinAlg/bin/conda/libstatiskit_linalg-dev
-  # - CONDA_RECIPE=share/git/LinAlg/bin/conda/libstatiskit_linalg
-  # - CONDA_RECIPE=share/git/LinAlg/bin/conda/python-statiskit_linalg
-  # - CONDA_RECIPE=share/git/Core/bin/conda/libstatiskit_core-dev
-  # - CONDA_RECIPE=share/git/Core/bin/conda/libstatiskit_core
-  # - CONDA_RECIPE=share/git/Core/bin/conda/python-statiskit_core
-  # - CONDA_RECIPE=bin/conda/libstatiskit-dev
-  # - CONDA_RECIPE=bin/conda/libstatiskit
-  # - CONDA_RECIPE=bin/conda/python-statiskit
-  # - CONDA_RECIPE=bin/conda/statiskit
-  # - DOCKER_CONTEXT=bin/docker/statiskit
-  #   DOCKER_CONTAINER=statiskit
-  # - ANACONDA_RELEASE=true
+  - DOCKER_CONTEXT=bin/docker/linux-32
+    DOCKER_CONTAINER=linux-32
+  - DOCKER_CONTEXT=bin/docker/linux-64
+    DOCKER_CONTAINER=linux-64
+  - CONDA_RECIPE=etc/conda/python-statiskit
+  - CONDA_RECIPE=etc/conda/statiskit-toolchain
+  - DOCKER_CONTEXT=bin/docker/python-statiskit
+    DOCKER_CONTAINER=python-statiskit
+  - DOCKER_CONTEXT=bin/docker/statiskit-toolchain
+    DOCKER_CONTAINER=statiskit-toolchain
 
 matrix:
-  include:
-    - os: linux
-      dist: precise
-    - os: osx
-      osx_image: xcode8.3
-    - os: windows
   exclude:
     - os: osx
       env:
@@ -90,26 +67,28 @@ matrix:
         DOCKER_CONTAINER=linux-64
     - os: osx
       env:
-        CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
-        TRAVIS_WAIT=50
-    - os: osx
-      env: CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
-    - os: linux
-      env: CONDA_RECIPE=bin/conda/llvm-suite
-  allow_failures:
-    - os: linux
-      env:
-        CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
-        TRAVIS_WAIT=50
-    - os: linux
-      env: CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
+        DOCKER_CONTEXT=bin/docker/python-statiskit
+        DOCKER_CONTAINER=python-statiskit
     - os: osx
       env:
-        CONDA_RECIPE=bin/conda/llvm-suite
-    - os: osx
+        DOCKER_CONTEXT=bin/docker/statiskit-toolchain
+        DOCKER_CONTAINER=statiskit-toolchain
+    - os: windows
       env:
-        CONDA_RECIPE=bin/conda/boost-suite
-        TRAVIS_WAIT=30
+        DOCKER_CONTEXT=bin/docker/linux-32
+        DOCKER_CONTAINER=linux-32
+    - os: windows
+      env:
+        DOCKER_CONTEXT=bin/docker/linux-64
+        DOCKER_CONTAINER=linux-64
+    - os: windows
+      env:
+        DOCKER_CONTEXT=bin/docker/python-statiskit
+        DOCKER_CONTAINER=python-statiskit
+    - os: windows
+      env:
+        DOCKER_CONTEXT=bin/docker/statiskit-toolchain
+        DOCKER_CONTAINER=statiskit-toolchain
 
 before_install:
   - git clone https://github.com/StatisKit/travis-ci.git --depth=1
