--- a/etc/conda/statiskit-toolchain/meta.yaml
+++ b/etc/conda/statiskit-toolchain/meta.yaml
@@ -15,18 +15,19 @@ requirements:
     - libtoolchain
     - libtoolchain-dev
     - python-toolchain
+    - autowig-toolchain
     - libstatiskit_stl-dev
     - libstatiskit_linalg-dev
     - libstatiskit_core-dev
     - libstatiskit_glm-dev
-    - statiskit
-    - autowig-toolchain
+    - python-statiskit
   run:
     - {{ pin_compatible('libtoolchain', min_pin='x.x', max_pin='x.x') }}
     - {{ pin_compatible('libtoolchain-dev', min_pin='x.x', max_pin='x.x') }}
     - {{ pin_compatible('python-toolchain', min_pin='x.x', max_pin='x.x') }}
+    - {{ pin_compatible('autowig-toolchain', min_pin='x.x', max_pin='x.x') }}
     - {{ pin_compatible('libstatiskit_stl-dev', min_pin='x.x', max_pin='x.x') }}
     - {{ pin_compatible('libstatiskit_linalg-dev', min_pin='x.x', max_pin='x.x') }}
     - {{ pin_compatible('libstatiskit_core-dev', min_pin='x.x', max_pin='x.x') }}
     - {{ pin_compatible('libstatiskit_glm-dev', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('statiskit', min_pin='x.x', max_pin='x.x') }}
+    - {{ pin_compatible('python-statiskit', min_pin='x.x', max_pin='x.x') }}
