--- a/travis.yml
+++ b/travis.yml
@@ -47,17 +47,14 @@ env:
   global:
     - ANACONDA_LABEL=release
   matrix:
-    - DOCKER_CONTEXT=bin/docker/linux-32
-      DOCKER_CONTAINER=linux-32
-    - DOCKER_CONTEXT=bin/docker/linux-64
-      DOCKER_CONTAINER=linux-64
-    - CONDA_RECIPE=etc/conda/python-statiskit
+    # - CONDA_RECIPE=etc/conda/python-statiskit
     - CONDA_RECIPE=etc/conda/statiskit-toolchain
-    - DOCKER_CONTEXT=bin/docker/python-statiskit
-      DOCKER_CONTAINER=python-statiskit
+    - ANACONDA_RELEASE=true
+    # - DOCKER_CONTEXT=bin/docker/python-statiskit
+    #   DOCKER_CONTAINER=python-statiskit
     - DOCKER_CONTEXT=bin/docker/statiskit-toolchain
       DOCKER_CONTAINER=statiskit-toolchain
-
+      
 matrix:
   exclude:
     - os: osx
