--- a/etc/conda/python-statiskit/meta.yaml
+++ b/etc/conda/python-statiskit/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: python-statiskit 
-  version: {{ GIT_DESCRIBE_TAG }}
+  version: {{ DATETIME_DESCRIBE_VERSION }}
 
 build:
-  number: {{ GIT_DESCRIBE_NUMBER }}
+  number: {{ DATETIME_DESCRIBE_NUMBER }}
 
 about:
   home: http://statiskit.readthedocs.io/
