--- a/etc/conda/statiskit-toolchain/meta.yaml
+++ b/etc/conda/statiskit-toolchain/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: statiskit-dev
-  version: {{ GIT_DESCRIBE_TAG }}
+  version: {{ DATETIME_DESCRIBE_VERSION }}
 
 build:
-  number: {{ GIT_DESCRIBE_NUMBER }}
+  number: {{ DATETIME_DESCRIBE_NUMBER }}
 
 about:
   home: http://statiskit.readthedocs.io/
@@ -16,18 +16,18 @@ requirements:
     - libtoolchain-dev
     - python-toolchain
     - autowig-toolchain
-    - libstatiskit_stl-dev
-    - libstatiskit_linalg-dev
-    - libstatiskit_core-dev
-    - libstatiskit_glm-dev
-    - python-statiskit
+    # - libstatiskit_stl-dev
+    # - libstatiskit_linalg-dev
+    # - libstatiskit_core-dev
+    # - libstatiskit_glm-dev
+    # - python-statiskit
   run:
     - {{ pin_compatible('libtoolchain', min_pin='x.x', max_pin='x.x') }}
     - {{ pin_compatible('libtoolchain-dev', min_pin='x.x', max_pin='x.x') }}
     - {{ pin_compatible('python-toolchain', min_pin='x.x', max_pin='x.x') }}
     - {{ pin_compatible('autowig-toolchain', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('libstatiskit_stl-dev', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('libstatiskit_linalg-dev', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('libstatiskit_core-dev', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('libstatiskit_glm-dev', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('python-statiskit', min_pin='x.x', max_pin='x.x') }}
+    # - {{ pin_compatible('libstatiskit_stl-dev', min_pin='x.x', max_pin='x.x') }}
+    # - {{ pin_compatible('libstatiskit_linalg-dev', min_pin='x.x', max_pin='x.x') }}
+    # - {{ pin_compatible('libstatiskit_core-dev', min_pin='x.x', max_pin='x.x') }}
+    # - {{ pin_compatible('libstatiskit_glm-dev', min_pin='x.x', max_pin='x.x') }}
+    # - {{ pin_compatible('python-statiskit', min_pin='x.x', max_pin='x.x') }}
