Update 'statiskit-toolchain' recipe

--- a/etc/conda/statiskit-toolchain/meta.yaml
+++ b/etc/conda/statiskit-toolchain/meta.yaml
@@ -1,5 +1,5 @@
 package:
-  name: statiskit-dev
+  name: statiskit-toolchain
   version: {{ DATETIME_DESCRIBE_VERSION }}
 
 build:
@@ -16,18 +16,22 @@ requirements:
     - libtoolchain-dev
     - python-toolchain
     - autowig-toolchain
+    - devops-tools
     # - libstatiskit_stl-dev
     # - libstatiskit_linalg-dev
     # - libstatiskit_core-dev
     # - libstatiskit_glm-dev
     # - python-statiskit
   run:
-    - {{ pin_compatible('libtoolchain', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('libtoolchain-dev', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('python-toolchain', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('autowig-toolchain', min_pin='x.x', max_pin='x.x') }}
-    # - {{ pin_compatible('libstatiskit_stl-dev', min_pin='x.x', max_pin='x.x') }}
-    # - {{ pin_compatible('libstatiskit_linalg-dev', min_pin='x.x', max_pin='x.x') }}
-    # - {{ pin_compatible('libstatiskit_core-dev', min_pin='x.x', max_pin='x.x') }}
-    # - {{ pin_compatible('libstatiskit_glm-dev', min_pin='x.x', max_pin='x.x') }}
-    # - {{ pin_compatible('python-statiskit', min_pin='x.x', max_pin='x.x') }}
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - {{ pin_compatible('libtoolchain', exact=True) }}
+    - {{ pin_compatible('libtoolchain-dev', exact=True) }}
+    - {{ pin_compatible('python-toolchain', exact=True) }}
+    - {{ pin_compatible('autowig-toolchain', exact=True) }}
+    - {{ pin_compatible('devops-tools', exact=True) }}
+    # - {{ pin_compatible('libstatiskit_stl-dev', exact=True) }}
+    # - {{ pin_compatible('libstatiskit_linalg-dev', exact=True) }}
+    # - {{ pin_compatible('libstatiskit_core-dev', exact=True) }}
+    # - {{ pin_compatible('libstatiskit_glm-dev', exact=True) }}
+    # - {{ pin_compatible('python-statiskit', exact=True) }}
