--- a/etc/conda/python-statiskit/meta.yaml
+++ b/etc/conda/python-statiskit/meta.yaml
@@ -17,10 +17,10 @@ requirements:
     - python-statiskit_core
     - python-statiskit_glm
   run:
-    - {{ pin_compatible('python-statiskit_stl', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('python-statiskit_linalg', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('python-statiskit_core', min_pin='x.x', max_pin='x.x') }}
-    - {{ pin_compatible('python-statiskit_glm', min_pin='x.x', max_pin='x.x') }}
+    - {{ pin_compatible('python-statiskit_stl', exact=True) }}
+    - {{ pin_compatible('python-statiskit_linalg', exact=True) }}
+    - {{ pin_compatible('python-statiskit_core', exact=True) }}
+    - {{ pin_compatible('python-statiskit_glm', exact=True) }}
     - python
     - ipython
     - jupyter
