--- a/travis.yml
+++ b/travis.yml
@@ -47,14 +47,14 @@ env:
   global:
     - ANACONDA_LABEL=release
   matrix:
-    - ANACONDA_RELEASE=begin
+    - ANACONDA_RELEASE=start
     # - CONDA_RECIPE=etc/conda/python-statiskit
     - CONDA_RECIPE=etc/conda/statiskit-toolchain
     # - DOCKER_CONTEXT=etc/docker/python-statiskit
     #   DOCKER_CONTAINER=python-statiskit
     - DOCKER_CONTEXT=etc/docker/statiskit-toolchain
       DOCKER_CONTAINER=statiskit-toolchain
-    - ANACONDA_RELEASE=end
+    - ANACONDA_RELEASE=finish
 
 matrix:
   exclude:
