--- a/travis.yml
+++ b/travis.yml
@@ -48,10 +48,11 @@ env:
     - ANACONDA_LABEL=release
   matrix:
     - ANACONDA_RELEASE=start
-    # - CONDA_RECIPE=etc/conda/python-statiskit
+    - CONDA_RECIPE=etc/conda/libstatiskit-dev
+    - CONDA_RECIPE=etc/conda/libstatiskit-wig
+    - CONDA_RECIPE=etc/conda/libstatiskit
+    - CONDA_RECIPE=etc/conda/python-statiskit
     - CONDA_RECIPE=etc/conda/statiskit-toolchain
-    # - DOCKER_CONTEXT=etc/docker/python-statiskit
-    #   DOCKER_CONTAINER=python-statiskit
     - DOCKER_CONTEXT=etc/docker/statiskit-toolchain
       DOCKER_CONTAINER=statiskit-toolchain
     - ANACONDA_RELEASE=finish
@@ -60,12 +61,18 @@ matrix:
   exclude:
     - os: osx
       env:
+        CONDA_RECIPE=etc/docker/libstatiskit-wig
+    - os: osx
+      env:
         DOCKER_CONTEXT=etc/docker/python-statiskit
         DOCKER_CONTAINER=python-statiskit
     - os: osx
       env:
         DOCKER_CONTEXT=etc/docker/statiskit-toolchain
         DOCKER_CONTAINER=statiskit-toolchain
+    - os: windows
+      env:
+        CONDA_RECIPE=etc/docker/libstatiskit-wig
     - os: windows
       env:
         DOCKER_CONTEXT=etc/docker/python-statiskit
