--- a/etc/conda/libstatiskit-dev/meta.yaml
+++ b/etc/conda/libstatiskit-dev/meta.yaml
@@ -11,6 +11,10 @@ about:
   summary: A meta-package containing all C++ headers of the StatisKit software suite
 
 requirements:
+  build:
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - libtoolchain-dev
   host:
     - libstatiskit_stl-dev
     - libstatiskit_linalg-dev
@@ -20,6 +24,7 @@ requirements:
   run:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - {{ pin_compatible('libtoolchain-dev', exact=True) }}
     - {{ pin_compatible('libstatiskit_stl-dev', exact=True) }}
     - {{ pin_compatible('libstatiskit_linalg-dev', exact=True) }}
     # - {{ pin_compatible('libstatiskit_core-dev', exact=True) }}
