--- a/etc/conda/python-statiskit/meta.yaml
+++ b/etc/conda/python-statiskit/meta.yaml
@@ -11,12 +11,15 @@ about:
   summary: A meta-package containing all Python packages of the StatisKit software suite
 
 requirements:
+  build:
+    - python-toolchain
   host:
     - python-statiskit_stl
     - python-statiskit_linalg
     # - python-statiskit_core
     # - python-statiskit_glm
   run:
+    - {{ pin_compatible('python-toolchain', exact=True) }}
     - {{ pin_compatible('python-statiskit_stl', exact=True) }}
     - {{ pin_compatible('python-statiskit_linalg', exact=True) }}
     # - {{ pin_compatible('python-statiskit_core', exact=True) }}
