--- a/etc/conda/libstatiskit-dev/meta.yaml
+++ b/etc/conda/libstatiskit-dev/meta.yaml
@@ -16,8 +16,8 @@ requirements:
     - {{ compiler('cxx') }}
     - libtoolchain-dev
   host:
-    - libstatiskit_stl-dev
-    - libstatiskit_linalg-dev
+    # - libstatiskit_stl-dev
+    # - libstatiskit_linalg-dev
     # - libstatiskit_core-dev
     # - libstatiskit_glm-dev
     # - libstatiskit_pgm-dev
@@ -25,8 +25,8 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ pin_compatible('libtoolchain-dev', exact=True) }}
-    - {{ pin_compatible('libstatiskit_stl-dev', exact=True) }}
-    - {{ pin_compatible('libstatiskit_linalg-dev', exact=True) }}
+    # - {{ pin_compatible('libstatiskit_stl-dev', exact=True) }}
+    # - {{ pin_compatible('libstatiskit_linalg-dev', exact=True) }}
     # - {{ pin_compatible('libstatiskit_core-dev', exact=True) }}
     # - {{ pin_compatible('libstatiskit_glm-dev', exact=True) }}
     # - {{ pin_compatible('libstatiskit_pgm-dev', exact=True) }}
