--- a/etc/conda/python-statiskit/meta.yaml
+++ b/etc/conda/python-statiskit/meta.yaml
@@ -14,14 +14,14 @@ requirements:
   build:
     - python-toolchain
   host:
-    - python-statiskit_stl
-    - python-statiskit_linalg
+    # - python-statiskit_stl
+    # - python-statiskit_linalg
     # - python-statiskit_core
     # - python-statiskit_glm
   run:
     - {{ pin_compatible('python-toolchain', exact=True) }}
-    - {{ pin_compatible('python-statiskit_stl', exact=True) }}
-    - {{ pin_compatible('python-statiskit_linalg', exact=True) }}
+    # - {{ pin_compatible('python-statiskit_stl', exact=True) }}
+    # - {{ pin_compatible('python-statiskit_linalg', exact=True) }}
     # - {{ pin_compatible('python-statiskit_core', exact=True) }}
     # - {{ pin_compatible('python-statiskit_glm', exact=True) }}
     - python
