--- a/etc/conda/autowig-libstatiskit/meta.yaml
+++ b/etc/conda/autowig-libstatiskit/meta.yaml
@@ -14,15 +14,15 @@ requirements:
   build:
     - autowig-toolchain
   host:
-    # - autowig-libstatiskit_stl
-    # - autowig-libstatiskit_linalg
-    # - autowig-libstatiskit_core
-    # - autowig-libstatiskit_glm
+    - autowig-libstatiskit_stl
+    - autowig-libstatiskit_linalg
+    - autowig-libstatiskit_core
+    - autowig-libstatiskit_glm
     # - autowig-libstatiskit_pgm
   run:
     - {{ pin_compatible('autowig-toolchain', exact=True) }}
-    # - {{ pin_compatible('autowig-libstatiskit_stl', exact=True) }}
-    # - {{ pin_compatible('autowig-libstatiskit_linalg', exact=True) }}
-    # - {{ pin_compatible('autowig-libstatiskit_core', exact=True) }}
-    # - {{ pin_compatible('autowig-libstatiskit_glm', exact=True) }}
+    - {{ pin_compatible('autowig-libstatiskit_stl', exact=True) }}
+    - {{ pin_compatible('autowig-libstatiskit_linalg', exact=True) }}
+    - {{ pin_compatible('autowig-libstatiskit_core', exact=True) }}
+    - {{ pin_compatible('autowig-libstatiskit_glm', exact=True) }}
     # - {{ pin_compatible('autowig-libstatiskit_pgm', exact=True) }}
