--- a/etc/conda/python-statiskit/meta.yaml
+++ b/etc/conda/python-statiskit/meta.yaml
@@ -14,16 +14,18 @@ requirements:
   build:
     - python-toolchain
   host:
-    # - python-statiskit_stl
-    # - python-statiskit_linalg
-    # - python-statiskit_core
-    # - python-statiskit_glm
+    - python-statiskit_stl
+    - python-statiskit_linalg
+    - python-statiskit_core
+    - python-statiskit_glm
+    # - python-statiskit_pgm
   run:
     - {{ pin_compatible('python-toolchain', exact=True) }}
-    # - {{ pin_compatible('python-statiskit_stl', exact=True) }}
-    # - {{ pin_compatible('python-statiskit_linalg', exact=True) }}
-    # - {{ pin_compatible('python-statiskit_core', exact=True) }}
-    # - {{ pin_compatible('python-statiskit_glm', exact=True) }}
+    - {{ pin_compatible('python-statiskit_stl', exact=True) }}
+    - {{ pin_compatible('python-statiskit_linalg', exact=True) }}
+    - {{ pin_compatible('python-statiskit_core', exact=True) }}
+    - {{ pin_compatible('python-statiskit_glm', exact=True) }}
+    # - {{ pin_compatible('python-statiskit_pgm', exact=True) }}
     - python
     - ipython
     - jupyter
