--- a/travis.yml
+++ b/travis.yml
@@ -45,8 +45,9 @@ osx_image: xcode8.3
 
 env:
   global:
+    - PYTHON_VERSION: 2.7
     - ANACONDA_LABEL=release
-  matrix:
+  jobs:
     - ANACONDA_RELEASE=start
     - CONDA_RECIPE=etc/conda/libstatiskit-dev
     - CONDA_RECIPE=etc/conda/autowig-libstatiskit
